# frappe_whatsapp

./: CALLING_FEATURES.md  README.md  docker-compose.yml  livekit.yaml  pyproject.toml
frappe_whatsapp/: api.py  hooks.py  mcp.py  setup.py
frappe_whatsapp/calling/: mcp_config.py
frappe_whatsapp/fixtures/: role.json
frappe_whatsapp/frappe_whatsapp/doctype/whatsapp_call/: test_whatsapp_call.py  whatsapp_call.json  whatsapp_call.py
frappe_whatsapp/frappe_whatsapp/doctype/whatsapp_settings/: whatsapp_settings.json
frappe_whatsapp/utils/: __init__.py  calling.py  webhook.py
frappe_whatsapp/www/: whatsapp-call.html  whatsapp-call.py
