[project]
name = "frappe-whatsapp"
version = "0.1.0"
description = "WhatsApp integration for Frappe with calling functionality and MCP support"
authors = [
    {name = "Shridhar Patil", email = "shridhar.p@zerodha.com"},
]
dependencies = [
    "frappe",
    "requests>=2.25.1",
    "frappe-mcp>=0.1.0",
]
readme = "README.md"
requires-python = ">=3.8"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["frappe_whatsapp"]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.5",
    "pytest-cov>=3.0.0",
    "black>=22.3.0",
    "isort>=5.10.1",
    "flake8>=4.0.1",
]
